# ruchy-lambda

./: .clippy.toml  .gitignore  .pmat-gates.toml  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_COMPREHENSIVE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-REPORT-v3.208.0.md  LICENSE  Makefile  PROFILER_INTEGRATION_GUIDE.md  README.md  SKEPTICS_GUIDE.md  VERIFICATION_REPORT.md  benchmark_local_fib.rs  mutation-full.txt  mutation-results-new.txt  mutation-results.txt  mutation-test-output.txt  pmat-quality-gate-results.txt  pmat-quality.toml
.cargo/: config.toml
.github/workflows/: book.yml  ci.yml
baselines/: README.md
baselines/cpp/: Dockerfile.fibonacci  build.sh
baselines/cpp/lambda/: main-fibonacci.cpp
baselines/go/: build.sh  main-fibonacci.go
baselines/python/: build.sh  index-fibonacci.py
baselines/rust/: Cargo.toml
baselines/rust/src/: main-fibonacci.rs
benchmarks/: README.md
benchmarks/local-fibonacci/: README.md  benchmark-framework.sh  fibonacci.c  fibonacci.go  fibonacci.jl  fibonacci.py  fibonacci.rs  fibonacci.ruchy  results.json  run-benchmark.sh
benchmarks/reports/: cold-start-2025-11-04-v0.1.0.json
crates/bootstrap/: Cargo.toml  build.rs
crates/bootstrap/benches/: cold_start.rs
crates/bootstrap/src/: handler.ruchy  handler_fibonacci.ruchy  handler_fibonacci_generated.rs  handler_generated.rs  handler_minimal.ruchy  handler_minimal_generated.rs  handler_simd_vector.rs  main.rs  simd_ops.rs
crates/bootstrap/tests/: aws_validation_tests.rs  binary_size_tests.rs  documentation_tests.rs  handler_integration_test.rs  integration_tests.rs  phase3_binary_size_targets.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: lib.rs  main.rs  real_measurement.rs
crates/profiler/tests/: test_real_measurement.rs
crates/runtime/: Cargo.toml
crates/runtime-pure/: Cargo.toml  DEPLOYMENT-VERIFICATION-v3.208.0.md  README.md  TEST-REPORT-v3.208.0.md  TEST-RESULTS-v3.207.0.md  TEST-RESULTS-v3.208.0-FINAL.md  TEST-RESULTS-v3.208.0.md  TESTING.md  TRANSPILER-LIMITATIONS.md  build.rs
crates/runtime-pure/examples/: bootstrap.ruchy  bootstrap_generated.rs  bootstrap_optimized  bootstrap_pure_ruchy  bootstrap_size_opt  test_comprehensive.ruchy
crates/runtime-pure/src/: http_client.rs  lib.ruchy  lib_generated.rs
crates/runtime-pure/tests/: integration_tests.rs
crates/runtime/benches/: deserialization.rs
crates/runtime/src/: event.rs  http_client.rs  lib.rs  logger.rs
crates/runtime/tests/: behavioral_tests.rs  complexity_tests.rs  http_client_tests.rs  initialization_tests.rs  lazy_init_tests.rs  mock_server_tests.rs  runtime_api_tests.rs  structured_logging_tests.rs  transpiler_validation_tests.rs  zero_copy_tests.rs
docs/: ARM64_DEPLOYMENT_RESULTS.txt  ARM64_SIMD_IMPLEMENTATION.md  ARM_SIMD_SUMMARY.md  RUCHY_QUALITY_METRICS.md  TRUENO_LAMBDA_COMPARISON.md  phase3-optimization-plan.md  transpiler-specification.md
docs/execution/: phase5-results.md  roadmap.md
docs/roadmaps/: roadmap.yaml
docs/specification/: ruchy-compiled-transpiled-fast-lambda-in-world-spec.md
docs/specifications/: pure-ruchy-lambda-runtime-profiling-tool.md
examples/: fibonacci.ruchy  hello_world.expected.rs  hello_world.ruchy  simple_handler.ruchy  simple_handler_generated.rs
scripts/: arch-comparison.sh  benchmark-cold-start.sh  build-arm64-simd.sh  build-lambda-package.sh  deploy-baselines.sh  deploy-to-aws.sh  local-benchmark.sh  measure-aws-performance.sh  multi-config-benchmark.sh
tests/scripts/: test_build_lambda_package.sh
